JSAI/error/src/test/resources/base/j005.js
//Math.abs = function() { print("abs"); return 4 }
print("done");
